force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Fenbendazole__c.field-meta.xml
<CustomField>
    <fullName>Fenbendazole__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fenbendazole</label>
    <type>Checkbox</type>
</CustomField>