force-app/main/default/objects/Animal_Exam_Sheet__c/fields/FIV__c.field-meta.xml
<CustomField>
    <fullName>FIV__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FIV (INACTIVE)</label>
    <type>Checkbox</type>
</CustomField>