force-app/main/default/objects/Animal_Exam_Sheet__c/fields/FIV_Performed__c.field-meta.xml
<CustomField>
    <fullName>FIV_Performed__c</fullName>
    <label>FIV Performed (INACTIVE)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In-house</fullName>
            </value>
            <value>
                <fullName>Idexx</fullName>
            </value>
            <value>
                <fullName>Antech</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>