force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Flea_Prev__c.field-meta.xml
<CustomField>
    <fullName>Flea_Prev__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flea Prev</label>
    <type>Checkbox</type>
</CustomField>