force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Floor_Surface__c.field-meta.xml
<CustomField>
    <fullName>Floor_Surface__c</fullName>
    <label>Floor Surface</label>
    <length>255</length>
    <type>Text</type>
</CustomField>