force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Forensic_Exam_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Forensic_Exam_Date_Time__c</fullName>
    <formula>IF(NOT(ISBLANK(Intake_Exam_Date_Time__c)), Intake_Exam_Date_Time__c,
IF(NOT(ISBLANK(Necropsy_Exam_Date_Time__c)), Necropsy_Exam_Date_Time__c, Exam_Date_Time__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exam Date/Time</label>
    <type>DateTime</type>
</CustomField>