force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Forensic_Exam_Type__c.field-meta.xml
<CustomField>
    <fullName>Forensic_Exam_Type__c</fullName>
    <formula>IF(RecordType.Name = &quot;Forensics Intake - NY&quot;, &quot;Intake Exam&quot;,
IF(RecordType.Name = &quot;Gross Necropsy - NY&quot;, &quot;Gross Necropsy Exam&quot;, RecordType.Name))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forensic Exam Type</label>
    <type>Text</type>
</CustomField>