force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Forensic_Hold_Release_Date__c.field-meta.xml
<CustomField>
    <fullName>Forensic_Hold_Release_Date__c</fullName>
    <label>Forensic Hold Release Date</label>
    <type>Date</type>
</CustomField>