force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Forensic_Hold_Released_By__c.field-meta.xml
<CustomField>
    <fullName>Forensic_Hold_Released_By__c</fullName>
    <label>Forensic Hold Released By</label>
    <length>100</length>
    <type>Text</type>
</CustomField>