force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Fungal_Culture__c.field-meta.xml
<CustomField>
    <fullName>Fungal_Culture__c</fullName>
    <label>Fungal Culture Performed (INACTIVE)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In-house</fullName>
            </value>
            <value>
                <fullName>Idexx</fullName>
            </value>
            <value>
                <fullName>Antech</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>