force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Fungal_Culture_Performed_Other__c.field-meta.xml
<CustomField>
    <fullName>Fungal_Culture_Performed_Other__c</fullName>
    <label>Fungal Culture Perf - Other (INACTIVE)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>