force-app/main/default/objects/Animal_Exam_Sheet__c/fields/FVRCP__c.field-meta.xml
<CustomField>
    <fullName>FVRCP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FVRCP</label>
    <type>Checkbox</type>
</CustomField>