force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <formula>Text(Animal__r.Gender__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sex</label>
    <type>Text</type>
</CustomField>