force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Great_Vessels__c.field-meta.xml
<CustomField>
    <fullName>Great_Vessels__c</fullName>
    <defaultValue>&quot;Vessels are intact with no obstruction.&quot;</defaultValue>
    <label>Great Vessels</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>