force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Hair_Coat__c.field-meta.xml
<CustomField>
    <fullName>Hair_Coat__c</fullName>
    <label>Hair Coat</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>