force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Hair_Coat_Finalized__c.field-meta.xml
<CustomField>
    <fullName>Hair_Coat_Finalized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hair Coat Finalized</label>
    <type>Checkbox</type>
</CustomField>