force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Handler__c.field-meta.xml
<CustomField>
    <fullName>Handler__c</fullName>
    <label>Handler</label>
    <length>100</length>
    <type>Text</type>
</CustomField>