force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Health_Certificate__c.field-meta.xml
<CustomField>
    <fullName>Health_Certificate__c</fullName>
    <description>Kat Requested 4_22_16</description>
    <label>Health Certificate</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>