force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Heart__c.field-meta.xml
<CustomField>
    <fullName>Heart__c</fullName>
    <defaultValue>&quot;Epicardial fat is present. Tricuspid valve, pulmonic valve, aortic valve, and mitral valve are intact with no ruptured chordae tendineae or obstruction. No septal defect appreciated. The endocardium is smooth with no defects. The left and right free ventricular wall measures approximately 3:1. Appears subjectively appropriate in size with no overt masses or lesions.&quot;</defaultValue>
    <label>Heart</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>