force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Heartworm__c.field-meta.xml
<CustomField>
    <fullName>Heartworm__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Heartworm</label>
    <type>Checkbox</type>
</CustomField>