force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Heartworm_Performed_Other__c.field-meta.xml
<CustomField>
    <fullName>Heartworm_Performed_Other__c</fullName>
    <label>Heartworm Performed - Other (INACTIVE)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>