force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Heartworm_Prev__c.field-meta.xml
<CustomField>
    <fullName>Heartworm_Prev__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Heartworm Prev</label>
    <type>Checkbox</type>
</CustomField>