force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Heartworm_Prev_Dropdown__c.field-meta.xml
<CustomField>
    <fullName>Heartworm_Prev_Dropdown__c</fullName>
    <label>Heartworm_Prev Dropdown</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Revolution - Puppies &lt;= 5lbs</fullName>
            </value>
            <value>
                <fullName>Revolution - Dogs 5.1 - 10lbs</fullName>
            </value>
            <value>
                <fullName>Revolution - Dogs 10.1 - 20lbs</fullName>
            </value>
            <value>
                <fullName>Revolution - Dogs 20.1 - 40lbs</fullName>
            </value>
            <value>
                <fullName>Revolution - Dogs 40.1 - 85lbs</fullName>
            </value>
            <value>
                <fullName>Frontline - Dog up to 22lbs</fullName>
            </value>
            <value>
                <fullName>Frontline - Dog 23-44 lbs</fullName>
            </value>
            <value>
                <fullName>Frontline - Dog 45-88 lbs</fullName>
            </value>
            <value>
                <fullName>Frontline - Dog 89-132 lbs</fullName>
            </value>
            <value>
                <fullName>Frontline - Dog 132 and up</fullName>
            </value>
            <value>
                <fullName>Advantage Multi – Dogs 3-9 lbs</fullName>
            </value>
            <value>
                <fullName>Advantage Multi – Dogs 9.1 – 20 lbs</fullName>
            </value>
            <value>
                <fullName>Advantage Multi – Dogs 20.1 – 55 lbs</fullName>
            </value>
            <value>
                <fullName>Advantage Multi – Dogs 55.1 – 88 lbs</fullName>
            </value>
            <value>
                <fullName>Advantage Multi – Dogs 88.1 – 110 lbs</fullName>
            </value>
            <value>
                <fullName>Frontline – Kittens</fullName>
            </value>
            <value>
                <fullName>Frontline – Cats</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>