force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Hoof_condition__c.field-meta.xml
<CustomField>
    <fullName>Hoof_condition__c</fullName>
    <label>Hoof condition</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Poor</fullName>
            </value>
            <value>
                <fullName>Fair</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>