force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Hoof_Condition_Notes__c.field-meta.xml
<CustomField>
    <fullName>Hoof_Condition_Notes__c</fullName>
    <label>Hoof Condition Notes</label>
    <length>800</length>
    <type>LongTextArea</type>
</CustomField>