force-app/main/default/objects/Animal_Exam_Sheet__c/fields/How_Age_Was_Determined__c.field-meta.xml
<CustomField>
    <fullName>How_Age_Was_Determined__c</fullName>
    <label>How Age Was Determined</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>