force-app/main/default/objects/Animal_Exam_Sheet__c/fields/How_Age_Was_Estimated__c.field-meta.xml
<CustomField>
    <fullName>How_Age_Was_Estimated__c</fullName>
    <label>How Age Was Estimated</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dentition</fullName>
            </value>
            <value>
                <fullName>Lenticular transillumination</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>