force-app/main/default/objects/Animal_Exam_Sheet__c/fields/How_Age_Was_Estimated_Other__c.field-meta.xml
<CustomField>
    <fullName>How_Age_Was_Estimated_Other__c</fullName>
    <label>How Age Was Estimated - Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>