force-app/main/default/objects/Animal_Exam_Sheet__c/fields/HYD__c.field-meta.xml
<CustomField>
    <fullName>HYD__c</fullName>
    <label>Hydration Notes</label>
    <type>TextArea</type>
</CustomField>