force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Hydration__c.field-meta.xml
<CustomField>
    <fullName>Hydration__c</fullName>
    <label>Hydration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hydrated</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>