force-app/main/default/objects/Animal_Exam_Sheet__c/fields/If_Yes_For_How_Long__c.field-meta.xml
<CustomField>
    <fullName>If_Yes_For_How_Long__c</fullName>
    <label>If Yes, For How Long?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>