force-app/main/default/objects/Animal_Exam_Sheet__c/fields/If_Yes_Specify_Partner__c.field-meta.xml
<CustomField>
    <fullName>If_Yes_Specify_Partner__c</fullName>
    <label>If Yes, Specify Partner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>