force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Ileum__c.field-meta.xml
<CustomField>
    <fullName>Ileum__c</fullName>
    <defaultValue>&quot;Mucosa intact, no palpable irregularities and the diameter of the lumen is uniform throughout. Serosal and mucosal surface are smooth and shiny with no lesions or parasites overtly appreciated.&quot;</defaultValue>
    <label>Ileum</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>