force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Ileum_Contents__c.field-meta.xml
<CustomField>
    <fullName>Ileum_Contents__c</fullName>
    <label>Ileum Contents</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>