force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Impression_Smear_Performed_Other__c.field-meta.xml
<CustomField>
    <fullName>Impression_Smear_Performed_Other__c</fullName>
    <label>Impression Smear Results (INACTIVE)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Abnormal</fullName>
            </value>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>