force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Impression_Smear_PerformedOther__c.field-meta.xml
<CustomField>
    <fullName>Impression_Smear_PerformedOther__c</fullName>
    <label>Impression Smear Perf - Other (INACTIVE)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>