force-app/main/default/objects/Animal_Exam_Sheet__c/fields/IN_Bordetella__c.field-meta.xml
<CustomField>
    <fullName>IN_Bordetella__c</fullName>
    <label>IN Bordetella Perf - Other (INACTIVE)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>