force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Individual_Identification__c.field-meta.xml
<CustomField>
    <fullName>Individual_Identification__c</fullName>
    <label>Other Identification Information</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>