force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Influenza_Swab_Test_Other__c.field-meta.xml
<CustomField>
    <fullName>Influenza_Swab_Test_Other__c</fullName>
    <description>Diagnostic - Avian Only - Influenza Swab Test Other</description>
    <inlineHelpText>Diagnostic - Avian Only - Influenza Swab Test Other</inlineHelpText>
    <label>Influenza Swab Test - Other (INACTIVE)</label>
    <length>150</length>
    <type>Text</type>
</CustomField>