force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Influenza_Swab_Test_Results__c.field-meta.xml
<CustomField>
    <fullName>Influenza_Swab_Test_Results__c</fullName>
    <description>Diagnostic, - Avian Only - Influenza Swab Test Results</description>
    <inlineHelpText>Diagnostic, - Avian Only - Influenza Swab Test Results</inlineHelpText>
    <label>Influenza Swab Test Results (INACTIVE)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Positive</fullName>
            </value>
            <value>
                <fullName>Negative</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>