force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Influenza_Vaccine__c.field-meta.xml
<CustomField>
    <fullName>Influenza_Vaccine__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Influenza Vaccine</label>
    <type>Checkbox</type>
</CustomField>