force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Insects_on_Body_Description__c.field-meta.xml
<CustomField>
    <fullName>Insects_on_Body_Description__c</fullName>
    <label>Insects on Body Description</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>