force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Intake_Exam_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Intake_Exam_Date_Time__c</fullName>
    <label>Intake Exam Date/Time</label>
    <type>DateTime</type>
</CustomField>