force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Intake_Exam_Date_Time_Formula__c.field-meta.xml
<CustomField>
    <fullName>Intake_Exam_Date_Time_Formula__c</fullName>
    <formula>Animal_Exam_Sheet__r.Intake_Exam_Date_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Intake Exam Date/Time</label>
    <type>DateTime</type>
</CustomField>