force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Intake_Exam_Performed__c.field-meta.xml
<CustomField>
    <fullName>Intake_Exam_Performed__c</fullName>
    <formula>NOT(ISBLANK(Animal_Exam_Sheet__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Intake Exam Performed</label>
    <type>Checkbox</type>
</CustomField>