force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Intake_Exam_Veterinarian__c.field-meta.xml
<CustomField>
    <fullName>Intake_Exam_Veterinarian__c</fullName>
    <label>Intake Exam Veterinarian</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Necropsy_Veterinarians</valueSetName>
    </valueSet>
</CustomField>