force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Intake_Exam_Veterinarian_Formula__c.field-meta.xml
<CustomField>
    <fullName>Intake_Exam_Veterinarian_Formula__c</fullName>
    <formula>TEXT(Animal_Exam_Sheet__r.Intake_Exam_Veterinarian__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Intake Exam Veterinarian</label>
    <type>Text</type>
</CustomField>