force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Integ_Parasites__c.field-meta.xml
<CustomField>
    <fullName>Integ_Parasites__c</fullName>
    <label>Integument/External Parasite Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>