force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Integument_External_Parasites2__c.field-meta.xml
<CustomField>
    <fullName>Integument_External_Parasites2__c</fullName>
    <label>Integument/External Parasites</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No ectoparasites observed</fullName>
            </value>
            <value>
                <fullName>No parasites seen. Clean, shiny haircoat</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Mites found</fullName>
            </value>
            <value>
                <fullName>Lice found</fullName>
            </value>
            <value>
                <fullName>Scaly leg mites found or suspected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>