force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Items_on_the_Body_Description__c.field-meta.xml
<CustomField>
    <fullName>Items_on_the_Body_Description__c</fullName>
    <label>Items on the Body Description</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>