force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Jejunum_Contents__c.field-meta.xml
<CustomField>
    <fullName>Jejunum_Contents__c</fullName>
    <label>Jejunum Contents</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>