force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Joints__c.field-meta.xml
<CustomField>
    <fullName>Joints__c</fullName>
    <defaultValue>&quot;Smooth and symmetrical axial joints with no gross swelling or crepitus.&quot;</defaultValue>
    <label>Joints</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>