force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Joints_Space_Finalized__c.field-meta.xml
<CustomField>
    <fullName>Joints_Space_Finalized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Joints Space Finalized</label>
    <type>Checkbox</type>
</CustomField>