force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Kidneys__c.field-meta.xml
<CustomField>
    <fullName>Kidneys__c</fullName>
    <defaultValue>&quot;The kidneys are bilaterally symmetrical. The capsular surfaces have no adhesions and are readily removed. The transected portions of kidneys are smooth in contour and on palpation. There is clear distinction between the cortex and the medulla. The renal pelvis and renal papilla are intact and are unremarkable in appearance. Appears subjectively appropriate in size with no overt masses or lesions.&quot;</defaultValue>
    <label>Kidneys</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>