force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Kidneys_Finalized__c.field-meta.xml
<CustomField>
    <fullName>Kidneys_Finalized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Kidneys Finalized</label>
    <type>Checkbox</type>
</CustomField>